--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,14 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
     implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
 
+    // Koin for Android
+    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
+    
+    // Charts library
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
     testImplementation "org.mockito:mockito-core:2.23.0"
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
-    testImplementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
     testImplementation 'junit:junit:4.12'
     testImplementation "android.arch.core:core-testing:1.1.1"
 
@@ -62,13 +67,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    // Koin for Android
-    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
-
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
