--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0-alpha1'
+    implementation 'com.google.android.material:material:1.0.0'
+
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.3"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
@@ -54,6 +56,9 @@ dependencies {
     
     // Charts library
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    // Indicator library
+    implementation 'me.relex:circleindicator:2.1.2'
 
     testImplementation "org.mockito:mockito-core:2.23.0"
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
