- Making UI tests. - Finalizing the app.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.bitcoininfoapp.application.TestAppJUnitRunner"
         flavorDimensions "default"
 
     }
@@ -32,6 +32,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    // Androidx dependencies
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.core:core-ktx:1.1.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -39,14 +40,13 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0-alpha1'
     implementation 'com.google.android.material:material:1.0.0'
 
-
+    // RxJava and android version
     implementation "io.reactivex.rxjava2:rxjava:2.2.3"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
+    // Retrofit and rx and Moshi json converters
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
-
-    //Moshi json converter
     implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
     implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
@@ -60,18 +60,27 @@ dependencies {
     // Indicator library
     implementation 'me.relex:circleindicator:2.1.2'
 
-    testImplementation "org.mockito:mockito-core:2.23.0"
-    testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    // Mockito, junit and arch for testing
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito-inline:2.25.0'
+
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
     testImplementation "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
 
     // Koin testing packages
     testImplementation  'org.koin:koin-test:2.0.1'
+    androidTestImplementation('org.koin:koin-test:2.0.1')
+            { exclude group: 'org.mockito', module:'mockito-inline'}
+
+    // Test helpers for LiveData
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
 
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
+    // Espresso and test runner for androidTest
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
 }
