--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,17 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Androidx dependencies
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0-beta02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0-alpha1'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+
+    // Room components
+    implementation 'android.arch.persistence.room:runtime:2.2.1'
+    kapt 'android.arch.persistence.room:compiler:2.2.1'
+    implementation 'androidx.room:room-rxjava2:2.2.1'
 
     // RxJava and android version
     implementation "io.reactivex.rxjava2:rxjava:2.2.3"
